pokemon-finder/css/main.css
body  {
  background-color: #79c9fa;
  background-image: url('https://github.com/StefanoBisio/pokemon-finder/blob/master/css/pokemons.jpg?raw=true');
  background-repeat: no-repeat;
  background-size: contain;
  background-position: bottom;
  background-attachment: fixed;

}
.container {
  max-width: 60%;
}

.pokeBall {
  margin-top: 30px;
  /*position: absolute;*/
  /*top: 40px;*/
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border: solid black 5px;
  border-radius: 20px;
  min-height: 320px;
}


.red {
  color: white;
  height: 100%;
  padding: 20px 20px 0px 20px;
  background-color: #e70000;
  border-radius: 15px 15px 0px 0px;
}
.pokeballcentre {
  min-height: 90px;
  background-image: url('https://raw.githubusercontent.com/StefanoBisio/pokemon-finder/master/css/centre.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;

}
.white {
  height: 100%;
  color: #333;
  background-color: white;
  padding: 10px 20px 20px 20px;
  border-radius: 0px 0px 15px 15px;
}

button {
  margin-left: 5px;
}

@media screen and (max-width: 920px) {
    .container {
      padding: 0px;
      max-width: 90%;
   }

   button, input {
    margin-left: 0px;
    margin-top: 10px;
    min-width: 100%;
   }
}

.hidden {
  display: none;
}

.secondBlock {
  margin-top: 20px;
  padding: 20px 20px 10px 20px;
  background-color: white;
  border: 5px solid black;
  border-radius: 20px;
 }

.pokemonList {
  display: flex;
  flex-wrap: wrap-reverse;
}
.pokemonList li {
  margin: auto;
  min-width: 30%;

}

